{
  "version": 4,
  "terraform_version": "0.13.7",
  "serial": 82,
  "lineage": "92370cad-0b39-44cc-e104-566ee66ac15f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "api-joey-k8s-local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:089424413387:loadbalancer/api-joey-k8s-local-p83fsk",
            "availability_zones": [
              "us-east-2a"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": false,
            "dns_name": "api-joey-k8s-local-p83fsk-1978421666.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 10,
                "target": "SSL:443",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "api-joey-k8s-local-p83fsk",
            "idle_timeout": 300,
            "internal": false,
            "listener": [
              {
                "instance_port": 443,
                "instance_protocol": "TCP",
                "lb_port": 443,
                "lb_protocol": "TCP"
              }
            ],
            "name": "api-joey-k8s-local-p83fsk",
            "security_groups": [
              "sg-0c7616b733acdb975"
            ],
            "source_security_group": "089424413387/api-elb.joey.k8s.local",
            "source_security_group_id": "sg-0c7616b733acdb975",
            "subnets": [
              "subnet-0cc016d66b469ee53"
            ],
            "tags": {
              "KubernetesCluster": "joey.k8s.local",
              "Name": "api.joey.k8s.local",
              "kubernetes.io/cluster/joey.k8s.local": "owned"
            },
            "tags_all": {
              "KubernetesCluster": "joey.k8s.local",
              "Name": "api.joey.k8s.local",
              "kubernetes.io/cluster/joey.k8s.local": "owned"
            },
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.api-elb-joey-k8s-local",
            "aws_subnet.us-east-2a-joey-k8s-local",
            "aws_vpc.joey-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "joey-k8s-local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:089424413387:internet-gateway/igw-0bfae5a26dd7f4a74",
            "id": "igw-0bfae5a26dd7f4a74",
            "owner_id": "089424413387",
            "tags": {
              "KubernetesCluster": "joey.k8s.local",
              "Name": "joey.k8s.local",
              "kubernetes.io/cluster/joey.k8s.local": "owned"
            },
            "tags_all": {
              "KubernetesCluster": "joey.k8s.local",
              "Name": "joey.k8s.local",
              "kubernetes.io/cluster/joey.k8s.local": "owned"
            },
            "vpc_id": "vpc-089dbbd22d30c087e"
          },
          "dependencies": [
            "aws_vpc.joey-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route-0-0-0-0--0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0bfae5a26dd7f4a74",
            "id": "r-rtb-06a22033a2fa23cad1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06a22033a2fa23cad",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.joey-k8s-local",
            "aws_route_table.joey-k8s-local",
            "aws_vpc.joey-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "joey-k8s-local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:089424413387:route-table/rtb-06a22033a2fa23cad",
            "id": "rtb-06a22033a2fa23cad",
            "owner_id": "089424413387",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "KubernetesCluster": "joey.k8s.local",
              "Name": "joey.k8s.local",
              "kubernetes.io/cluster/joey.k8s.local": "owned",
              "kubernetes.io/kops/role": "public"
            },
            "tags_all": {
              "KubernetesCluster": "joey.k8s.local",
              "Name": "joey.k8s.local",
              "kubernetes.io/cluster/joey.k8s.local": "owned",
              "kubernetes.io/kops/role": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-089dbbd22d30c087e"
          },
          "dependencies": [
            "aws_vpc.joey-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-east-2a-joey-k8s-local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dff3a57c67eb6d09",
            "route_table_id": "rtb-06a22033a2fa23cad",
            "subnet_id": "subnet-0cc016d66b469ee53"
          },
          "dependencies": [
            "aws_route_table.joey-k8s-local",
            "aws_subnet.us-east-2a-joey-k8s-local",
            "aws_vpc.joey-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api-elb-joey-k8s-local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:089424413387:security-group/sg-0c7616b733acdb975",
            "description": "Security group for api ELB",
            "egress": [],
            "id": "sg-0c7616b733acdb975",
            "ingress": [],
            "name": "api-elb.joey.k8s.local",
            "name_prefix": "",
            "owner_id": "089424413387",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "joey.k8s.local",
              "Name": "api-elb.joey.k8s.local",
              "kubernetes.io/cluster/joey.k8s.local": "owned"
            },
            "tags_all": {
              "KubernetesCluster": "joey.k8s.local",
              "Name": "api-elb.joey.k8s.local",
              "kubernetes.io/cluster/joey.k8s.local": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-089dbbd22d30c087e"
          },
          "dependencies": [
            "aws_vpc.joey-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "masters-joey-k8s-local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:089424413387:security-group/sg-0079f64add9e22d2e",
            "description": "Security group for masters",
            "egress": [],
            "id": "sg-0079f64add9e22d2e",
            "ingress": [],
            "name": "masters.joey.k8s.local",
            "name_prefix": "",
            "owner_id": "089424413387",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "joey.k8s.local",
              "Name": "masters.joey.k8s.local",
              "kubernetes.io/cluster/joey.k8s.local": "owned"
            },
            "tags_all": {
              "KubernetesCluster": "joey.k8s.local",
              "Name": "masters.joey.k8s.local",
              "kubernetes.io/cluster/joey.k8s.local": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-089dbbd22d30c087e"
          },
          "dependencies": [
            "aws_vpc.joey-k8s-local"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nodes-joey-k8s-local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:089424413387:security-group/sg-02ce315c9dd36ae35",
            "description": "Security group for nodes",
            "egress": [],
            "id": "sg-02ce315c9dd36ae35",
            "ingress": [],
            "name": "nodes.joey.k8s.local",
            "name_prefix": "",
            "owner_id": "089424413387",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "joey.k8s.local",
              "Name": "nodes.joey.k8s.local",
              "kubernetes.io/cluster/joey.k8s.local": "owned"
            },
            "tags_all": {
              "KubernetesCluster": "joey.k8s.local",
              "Name": "nodes.joey.k8s.local",
              "kubernetes.io/cluster/joey.k8s.local": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-089dbbd22d30c087e"
          },
          "dependencies": [
            "aws_vpc.joey-k8s-local"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from-0-0-0-0--0-ingress-tcp-22to22-masters-joey-k8s-local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3625978969",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0079f64add9e22d2e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-joey-k8s-local",
            "aws_vpc.joey-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from-0-0-0-0--0-ingress-tcp-22to22-nodes-joey-k8s-local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3583718267",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02ce315c9dd36ae35",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.nodes-joey-k8s-local",
            "aws_vpc.joey-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from-0-0-0-0--0-ingress-tcp-443to443-api-elb-joey-k8s-local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3150313155",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c7616b733acdb975",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.api-elb-joey-k8s-local",
            "aws_vpc.joey-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from-api-elb-joey-k8s-local-egress-all-0to0-0-0-0-0--0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4257850821",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c7616b733acdb975",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.api-elb-joey-k8s-local",
            "aws_vpc.joey-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from-masters-joey-k8s-local-egress-all-0to0-0-0-0-0--0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3290002601",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0079f64add9e22d2e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.masters-joey-k8s-local",
            "aws_vpc.joey-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from-masters-joey-k8s-local-ingress-all-0to0-masters-joey-k8s-local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-1256728802",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0079f64add9e22d2e",
            "self": false,
            "source_security_group_id": "sg-0079f64add9e22d2e",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-joey-k8s-local",
            "aws_vpc.joey-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from-masters-joey-k8s-local-ingress-all-0to0-nodes-joey-k8s-local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-621073357",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02ce315c9dd36ae35",
            "self": false,
            "source_security_group_id": "sg-0079f64add9e22d2e",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-joey-k8s-local",
            "aws_security_group.nodes-joey-k8s-local",
            "aws_vpc.joey-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from-nodes-joey-k8s-local-egress-all-0to0-0-0-0-0--0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1352263141",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02ce315c9dd36ae35",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.nodes-joey-k8s-local",
            "aws_vpc.joey-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from-nodes-joey-k8s-local-ingress-all-0to0-nodes-joey-k8s-local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-2877373867",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02ce315c9dd36ae35",
            "self": false,
            "source_security_group_id": "sg-02ce315c9dd36ae35",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.nodes-joey-k8s-local",
            "aws_vpc.joey-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from-nodes-joey-k8s-local-ingress-tcp-1to2379-masters-joey-k8s-local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 1,
            "id": "sgrule-302864247",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0079f64add9e22d2e",
            "self": false,
            "source_security_group_id": "sg-02ce315c9dd36ae35",
            "to_port": 2379,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-joey-k8s-local",
            "aws_security_group.nodes-joey-k8s-local",
            "aws_vpc.joey-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from-nodes-joey-k8s-local-ingress-tcp-2382to4000-masters-joey-k8s-local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2382,
            "id": "sgrule-3967533062",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0079f64add9e22d2e",
            "self": false,
            "source_security_group_id": "sg-02ce315c9dd36ae35",
            "to_port": 4000,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-joey-k8s-local",
            "aws_security_group.nodes-joey-k8s-local",
            "aws_vpc.joey-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from-nodes-joey-k8s-local-ingress-tcp-4003to65535-masters-joey-k8s-local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4003,
            "id": "sgrule-2704260181",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0079f64add9e22d2e",
            "self": false,
            "source_security_group_id": "sg-02ce315c9dd36ae35",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-joey-k8s-local",
            "aws_security_group.nodes-joey-k8s-local",
            "aws_vpc.joey-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from-nodes-joey-k8s-local-ingress-udp-1to65535-masters-joey-k8s-local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 1,
            "id": "sgrule-465280600",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0079f64add9e22d2e",
            "self": false,
            "source_security_group_id": "sg-02ce315c9dd36ae35",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.masters-joey-k8s-local",
            "aws_security_group.nodes-joey-k8s-local",
            "aws_vpc.joey-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "https-elb-to-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-2387666048",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0079f64add9e22d2e",
            "self": false,
            "source_security_group_id": "sg-0c7616b733acdb975",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.api-elb-joey-k8s-local",
            "aws_security_group.masters-joey-k8s-local",
            "aws_vpc.joey-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "icmp-pmtu-api-elb-0-0-0-0--0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3,
            "id": "sgrule-318390717",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-0c7616b733acdb975",
            "self": false,
            "source_security_group_id": null,
            "to_port": 4,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.api-elb-joey-k8s-local",
            "aws_vpc.joey-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-east-2a-joey-k8s-local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:089424413387:subnet/subnet-0cc016d66b469ee53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.20.32.0/19",
            "id": "subnet-0cc016d66b469ee53",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "089424413387",
            "tags": {
              "KubernetesCluster": "joey.k8s.local",
              "Name": "us-east-2a.joey.k8s.local",
              "SubnetType": "Public",
              "kubernetes.io/cluster/joey.k8s.local": "owned",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "joey.k8s.local",
              "Name": "us-east-2a.joey.k8s.local",
              "SubnetType": "Public",
              "kubernetes.io/cluster/joey.k8s.local": "owned",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-089dbbd22d30c087e"
          },
          "dependencies": [
            "aws_vpc.joey-k8s-local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "joey-k8s-local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:089424413387:vpc/vpc-089dbbd22d30c087e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-0db21f568582147bf",
            "default_route_table_id": "rtb-0d8fa2f04ae29793f",
            "default_security_group_id": "sg-078e03ebf7b0f978d",
            "dhcp_options_id": "dopt-ddfa68b6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-089dbbd22d30c087e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d8fa2f04ae29793f",
            "owner_id": "089424413387",
            "tags": {
              "KubernetesCluster": "joey.k8s.local",
              "Name": "joey.k8s.local",
              "kubernetes.io/cluster/joey.k8s.local": "owned"
            },
            "tags_all": {
              "KubernetesCluster": "joey.k8s.local",
              "Name": "joey.k8s.local",
              "kubernetes.io/cluster/joey.k8s.local": "owned"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}